test/spec_vectors/func/fail/module_39.wat
(module (func $type-return-last-void-vs-num (result i32) (return (nop))))